# data-scraping-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
helpers/url/: url.py
helpers/utils/sitemap/: fetch_urls.py
scrapers/#/Web Scraping/New folder/: get-dealer-websites.py  main.py
scrapers/cargurus/: cargurus.py
scrapers/cars.com/: cars.com_url_scraper.py
scrapers/dealership-website-providers/: dealership_website_provider_identification.py
scrapers/dealership_website_providers/: dealer_scraping.py  dealership_website_provider_identification.py
scrapers/dealership_website_providers/ansira.net/: ansira_sitemap_vdp_urls.py  ansira_website_vdp.py
scrapers/google-maps/: main.py
scrapers/impel_360/: main.py
scrapers/vehicle-maketplaces/autotrader.com/: autotrader.com.py
scrapers/vehicle_maketplaces/autotrader/: app.py
scrapers/vehicle_maketplaces/cars.com/: cars.com_listings.py
scrapers/vehicle_maketplaces/cars_dot_com/: cars_dot_com_istings.py  cars_dot_com_vdp_page.py
scrapers/youtube.com/: urls.txt  youtube.html  youtube.ipynb  youtube.py
scripts/: movies.py  tempCodeRunnerFile.py
utils/: helpers.py
utils/apm/: client.py  context.py  exception.py  message.py  transaction.py
utils/aws/s3/: client.py  list.py  upload.py
utils/aws/sqs/: client.py  push.py
utils/csv/: append.py  write.py
utils/html/: fetch.py
utils/json/: csv.py  write.py
utils/pdf/: convert.py  merge.py
utils/playwright/: browser.py  element.py  html.py  media.py  navigation.py
utils/qr/: generate.py
utils/selenium/: html.py  webdriver.py
utils/sitemap/: fetch_urls_playwright.py  fetch_urls_requests.py  fetch_urls_selenium.py  type.py
utils/typesense/: __init__.py
utils/typesense/collection/: export.py  import_documents.py
