[tool.poetry]
name = "data-scraping-python"
version = "0.1.0"
description = ""
authors = ["Piyush Gambhir <90608533+piyush-gambhir@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "utils" },
    { include = "scrapers" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Database
pymongo = "^4.9.1"

# Testing
pytest = "^8.3.3"

# Configuration
python-dotenv = "^1.0.1"

# HTTP and API
requests = "^2.32.3"

# CLI and formatting
rich = "^13.8.1"

# Search engine
typesense = "^0.21.0"

# Cloud services
boto3 = "^1.35.29"

# Document processing
docx2pdf = "^0.1.8"

# Code linting and formatting
ruff = "^0.6.9"
black = "^24.8.0"

# Image processing
qrcode = "^8.0"
pillow = "^10.4.0"

# Data manipulation
pandas = "^2.2.3"

# Web scraping and automation
pyppeteer = "^2.0.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.2"
selenium = "^4.25.0"
lxml = "^5.3.0"

# Data validation
pydantic = "^2.9.2"
aiohttp = "^3.10.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
